--- a/index.html
+++ b/index.html
@@ -64,7 +64,13 @@
       <!--Hero-->
       <section class="hero">
         <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-        <button class="hero-button" type="button">Заказать услугу</button>
+        <button class="hero-button" type="button" data-modal-open>Заказать услугу</button>
+        <div class="backdrop is-hidden" data-modal>
+          <div class="modal">
+            <p>Lorem ipsum dolor sit amet.</p>
+            <button type="button" data-modal-close></button>
+          </div>
+        </div>
       </section>
 
       <!--Features-->
@@ -427,5 +433,6 @@
         </section>
       </div>
     </footer>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
