--- a/index.html
+++ b/index.html
@@ -130,28 +130,39 @@
           <h2 class="specialisation-title">Чем мы занимаемся</h2>
           <ul class="specialisation-list">
             <li>
-              <img
-                class="images"
-                src="./images/box-1.jpg"
-                width="370"
-                alt="Разработка структуры проекта"
-              />
+              <figure class="spec-fig">
+                <img
+                  class="images"
+                  src="./images/box-1.jpg"
+                  width="370"
+                  alt="Разработка структуры проекта"
+                />
+                <figcaption class="label">Десктопные приложения</figcaption>
+              </figure>
             </li>
+
             <li>
-              <img
-                class="images"
-                src="./images/box-2.jpg"
-                width="370"
-                alt="Разработка дизайна проекта"
-              />
+              <figure class="spec-fig">
+                <img
+                  class="images"
+                  src="./images/box-2.jpg"
+                  width="370"
+                  alt="Разработка дизайна проекта"
+                />
+                <figcaption class="label">Мобильные приложения</figcaption>
+              </figure>
             </li>
+
             <li>
-              <img
-                class="images"
-                src="./images/box-3.jpg"
-                width="370"
-                alt="Подбор оформления для проекта"
-              />
+              <figure class="spec-fig">
+                <img
+                  class="images"
+                  src="./images/box-3.jpg"
+                  width="370"
+                  alt="Подбор оформления для проекта"
+                />
+                <figcaption class="label">Дизайнерские решения</figcaption>
+              </figure>
             </li>
           </ul>
         </div>
