--- a/portfolio.html
+++ b/portfolio.html
@@ -91,12 +91,19 @@
           <h1 class="projects-title">Портфолио наших работ</h1>
           <ul class="projects-list">
             <li class="item">
-              <img
-                class="images"
-                src="./images/img-a1.jpg"
-                width="370"
-                alt="Вид спереди ноутбука, на экране загруженный сайт с портретными фотографиями людей"
-              />
+              <figure class="projects-fig">
+                <img
+                  class="images"
+                  src="./images/img-a1.jpg"
+                  width="370"
+                  alt="Раскрытый и включенный ноутбук, на экране загруженный сайт с портретными фотографиями людей"
+                />
+                <figcaption class="overlay">
+                  Технокряк это современная площадка распространения коронавируса. Компании
+                  используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                  конкурентов.
+                </figcaption>
+              </figure>
               <div class="card-text">
                 <h2 class="project-name">Технокряк</h2>
                 <p class="project-type">Веб-сайт</p>
