--- a/index.html
+++ b/index.html
@@ -67,8 +67,11 @@
         <button class="hero-button" type="button" data-modal-open>Заказать услугу</button>
         <div class="backdrop is-hidden" data-modal>
           <div class="modal">
-            <p>Lorem ipsum dolor sit amet.</p>
-            <button type="button" data-modal-close></button>
+            <button type="button" class="close-btn" data-modal-close>
+              <svg class="icon-close" width="18" height="18">
+                <use href="./images/symbol-defs.svg#icon-close-btn"></use>
+              </svg>
+            </button>
           </div>
         </div>
       </section>
