add overlays for all projects

--- a/portfolio.html
+++ b/portfolio.html
@@ -111,12 +111,19 @@
             </li>
 
             <li class="item">
-              <img
-                class="images"
-                src="./images/img-a2.jpg"
-                width="370"
-                alt="Два баскетболиста борются за мяч в прыжке"
-              />
+              <figure class="projects-fig">
+                <img
+                  class="images"
+                  src="./images/img-a2.jpg"
+                  width="370"
+                  alt="Два баскетболиста борются за мяч в прыжке"
+                />
+                <figcaption class="overlay">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, doloribus dicta!
+                  Voluptatum ut magni saepe consequuntur, earum asperiores.
+                </figcaption>
+              </figure>
+
               <div class="card-text">
                 <h2 class="project-name">Постер New Orlean vs Golden Star</h2>
                 <p class="project-type">Дизайн</p>
@@ -124,19 +131,40 @@
             </li>
 
             <li class="item">
-              <img
-                class="images"
-                src="./images/img-a3.jpg"
-                width="370"
-                alt="Логотип ресторана морепродуктов"
-              />
+              <figure class="projects-fig">
+                <img
+                  class="images"
+                  src="./images/img-a3.jpg"
+                  width="370"
+                  alt="Логотип ресторана морепродуктов"
+                />
+                <figcaption class="overlay">
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti similique
+                  tempora et quod dolore inventore asperiores sunt! Quisquam tempore harum magni
+                  veniam.
+                </figcaption>
+              </figure>
+
               <div class="card-text">
                 <h2 class="project-name">Ресторан Seafood</h2>
                 <p class="project-type">Приложение</p>
               </div>
             </li>
+
             <li class="item">
-              <img class="images" src="./images/img-a4.jpg" width="370" alt="Накладные наушники" />
+              <figure class="projects-fig">
+                <img
+                  class="images"
+                  src="./images/img-a4.jpg"
+                  width="370"
+                  alt="Накладные наушники"
+                />
+                <figcaption class="overlay">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, optio iure? Quasi
+                  incidunt provident accusantium sit exercitationem eaque excepturi autem!
+                </figcaption>
+              </figure>
+
               <div class="card-text">
                 <h2 class="project-name">Проект Prime</h2>
                 <p class="project-type">Маркетинг</p>
@@ -144,12 +172,20 @@
             </li>
 
             <li class="item">
-              <img
-                class="images"
-                src="./images/img-a5.jpg"
-                width="370"
-                alt="Бумажные квадратные коробки. Одна - белая, вторая - коричневая"
-              />
+              <figure class="projects-fig">
+                <img
+                  class="images"
+                  src="./images/img-a5.jpg"
+                  width="370"
+                  alt="Бумажные квадратные коробки. Одна - белая, вторая - коричневая"
+                />
+                <figcaption class="overlay">
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam obcaecati enim,
+                  repudiandae accusantium reprehenderit modi rerum quaerat magni, ex ad ratione
+                  quasi.
+                </figcaption>
+              </figure>
+
               <div class="card-text">
                 <h2 class="project-name">Проект Boxes</h2>
                 <p class="project-type">Приложение</p>
@@ -157,12 +193,19 @@
             </li>
 
             <li class="item">
-              <img
-                class="images"
-                src="./images/img-a6.jpg"
-                width="370"
-                alt="Компьютерный монитор на серой подставке"
-              />
+              <figure class="projects-fig">
+                <img
+                  class="images"
+                  src="./images/img-a6.jpg"
+                  width="370"
+                  alt="Компьютерный монитор на серой подставке"
+                />
+                <figcaption class="overlay">
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam fugiat neque
+                  mollitia odit labore?
+                </figcaption>
+              </figure>
+
               <div class="card-text">
                 <h2 class="project-name">Inspiration has no Borders</h2>
                 <p class="project-type">Веб-сайт</p>
@@ -170,12 +213,19 @@
             </li>
 
             <li class="item">
-              <img
-                class="images"
-                src="./images/img-a8.jpg"
-                width="370"
-                alt="Бирка белого цвета с коричневой верёвкой"
-              />
+              <figure class="projects-fig">
+                <img
+                  class="images"
+                  src="./images/img-a8.jpg"
+                  width="370"
+                  alt="Бирка белого цвета с коричневой верёвкой"
+                />
+                <figcaption class="overlay">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis similique
+                  iusto numquam illum officiis, excepturi hic quo temporibus maxime!
+                </figcaption>
+              </figure>
+
               <div class="card-text">
                 <h2 class="project-name">Издание Limited Edition</h2>
                 <p class="project-type">Дизайн</p>
@@ -183,7 +233,14 @@
             </li>
 
             <li class="item">
-              <img class="images" src="./images/img-a7.jpg" width="370" alt="Раскрытая книга" />
+              <figure class="projects-fig">
+                <img class="images" src="./images/img-a7.jpg" width="370" alt="Раскрытая книга" />
+                <figcaption class="overlay">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid voluptatem
+                  commodi nihil officia rem deserunt, ad eos mollitia?
+                </figcaption>
+              </figure>
+
               <div class="card-text">
                 <h2 class="project-name">Проект LAB</h2>
                 <p class="project-type">Маркетинг</p>
@@ -191,12 +248,19 @@
             </li>
 
             <li class="item">
-              <img
-                class="images"
-                src="./images/img-a9.jpg"
-                width="370"
-                alt="На экране ноутбука работающее приложение соответствующего проекта"
-              />
+              <figure class="projects-fig">
+                <img
+                  class="images"
+                  src="./images/img-a9.jpg"
+                  width="370"
+                  alt="На экране ноутбука работающее приложение соответствующего проекта"
+                />
+                <figcaption class="overlay">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae aliquam
+                  doloremque ratione enim. Repellat numquam dolor dolorem optio ea odit!
+                </figcaption>
+              </figure>
+
               <div class="card-text">
                 <h2 class="project-name">Growing Business</h2>
                 <p class="project-type">Приложение</p>
